# inter-stats-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-org-data.yml
docs/: docs-cli.html  docs-eurostat.html  docs-germany.html  docs-hdx.html  docs-netherlands.html  docs-ons.html  docs-swiss.html  docs-unhcr.html  docs.css  docs.js  hdx-orgs.html  index.html  robots.txt  search-index.json  sitemap.xml  swiss-orgs.html
inter_collector/: base.py  cli.py  collector.py  download_utils.py  progress.py  renamer.py  state.py
inter_collector/sources/: __init__.py
inter_collector/sources/ckan/: __init__.py  catalog.py  config.py  downloader.py  source.py
inter_collector/sources/eurostat/: __init__.py  api.py  downloader.py  source.py  toc.py
inter_collector/sources/germany/: __init__.py  source.py
inter_collector/sources/hdx/: __init__.py  api.py  catalog.py  downloader.py  source.py
inter_collector/sources/netherlands/: __init__.py  source.py
inter_collector/sources/ons/: __init__.py  api.py  catalog.py  downloader.py  source.py
inter_collector/sources/swiss/: __init__.py  api.py  catalog.py  downloader.py  source.py
inter_collector/sources/unhcr/: __init__.py  api.py  catalog.py  downloader.py  source.py
