[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inter-stats-collector"
version = "2.0.0"
description = "Bulk collector for international statistical and humanitarian datasets (Eurostat, UK ONS, Swiss FSO, UNHCR, HDX)"
license = {file = "LICENSE"}
authors = [{name = "Alaa Alhorani"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
inter-collect = "inter_collector.cli:main"
eurostat-collect = "inter_collector.cli:main"

[tool.setuptools.packages.find]
include = ["inter_collector*"]
